# AiSD

./: CMakeLists.txt  M1_DrzewoPitagorasa.py  M2_Chaotic.cpp
M1_DrzewoPitagorasa/: M1_DrzewoPitagorasa.py  README.md
M2_ChaoticScramble/: README.md
